WebrtcAudioPrivateSetAudioExperimentsFunction dummy implementation

This change introduces a dummy implementation of
WebrtcAudioPrivateSetAudioExperimentsFunction::RunAsync() which is
invoked when Chrome is build without support for WebRTC
(enable_webrtc=false).

BUG=730019,708475

Review-Url: https://codereview.chromium.org/2949563002
Cr-Commit-Position: refs/heads/master@{#481532}

Former-commit-id: 66e6a51773c74189058e55c8b7e63353b4f469f8