chrome/browser/extensions/api/webrtc_audio_private/webrtc_audio_private_api.cc
@@ -302,6 +302,7 @@ WebrtcAudioPrivateSetAudioExperimentsFunction::
     ~WebrtcAudioPrivateSetAudioExperimentsFunction() {}
 
 bool WebrtcAudioPrivateSetAudioExperimentsFunction::RunAsync() {
+#if BUILDFLAG(ENABLE_WEBRTC)
   DCHECK_CURRENTLY_ON(BrowserThread::UI);
   std::unique_ptr<wap::SetAudioExperiments::Params> params(
       wap::SetAudioExperiments::Params::Create(*args_));
@@ -320,6 +321,11 @@ bool WebrtcAudioPrivateSetAudioExperimentsFunction::RunAsync() {
 
   SendResponse(true);
   return true;
+#else
+  SetError("Not supported");
+  SendResponse(false);
+  return false;
+#endif
 }
 
 }  // namespace extensions
